GNOME Bugzilla – Bug 724540
pls: Return an error when the entry media is of the wrong type
Last modified: 2014-02-18 12:27:02 UTC
So that we can't add directories to Totem.
Created attachment 269388 [details] [review] pls: C89 compilation fixes Move declaration to the top of the block.
Created attachment 269389 [details] [review] pls: Return an error when the entry media is of the wrong type Ensure that the type of the returned media is GrlMediaBox when the detected type is GrlMediaBox.
Comment on attachment 269388 [details] [review] pls: C89 compilation fixes Attachment 269388 [details] pushed as d03820f - pls: C89 compilation fixes
Review of attachment 269389 [details] [review]: ::: configure.ac @@ +47,3 @@ # Grilo Pls library +GRLPLS_VERSION=0.2.8 The libraries follow their own version. So this should be 0.2.1
Created attachment 269541 [details] [review] pls: Return an error when the entry media is of the wrong type Ensure that the type of the returned media is GrlMediaBox when the detected type is GrlMediaBox. https://bugzilla.gnome.org/show_bug.cgi?id=724540 Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>
Attachment 269541 [details] pushed as 1213088 - pls: Return an error when the entry media is of the wrong type