pls: Return an error when the entry media is of the wrong type

Ensure that the type of the returned media is GrlMediaBox when
the detected type is GrlMediaBox.

https://bugzilla.gnome.org/show_bug.cgi?id=724540

Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>